removed buttons, overflow fix

--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -3,8 +3,9 @@
     border-radius: 10px;
     border: 2px solid #73AD21;
     width: 33%;
-    height: calc(100vh - 465px);
+    height: 290px;
     margin-top: 8px;
+    overflow: auto;
 }
 .inputtxtadjustment{
     margin-top: 5px;
